[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/DiveButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/HoverButton.png" type="Texture" id=2]
[ext_resource path="res://Main/GUI/GUI.gd" type="Script" id=3]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 970.0
margin_bottom = 32.0

[node name="Actions" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 27.0
margin_bottom = 32.0

[node name="DiveAction" type="TextureRect" parent="HBoxContainer/Actions"]
modulate = Color( 0.164706, 1, 0.0941176, 1 )
margin_right = 27.0
margin_bottom = 9.0
texture = ExtResource( 1 )

[node name="HoverAction" type="TextureRect" parent="HBoxContainer/Actions"]
modulate = Color( 0.00392157, 1, 0.00392157, 1 )
margin_top = 13.0
margin_right = 27.0
margin_bottom = 22.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 31.0
margin_top = 9.0
margin_right = 86.0
margin_bottom = 23.0
text = "Velocity:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 90.0
margin_right = 90.0
margin_bottom = 32.0

[node name="DistanceLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="HeightLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_bottom = 32.0
